--- a/WallpaperUtilities/WallpaperUtilities.csproj
+++ b/WallpaperUtilities/WallpaperUtilities.csproj
@@ -98,6 +98,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="notification.ps1" />
     <None Include="ScheduleWallpaperChange.ps1">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
